[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/MouseIcons/house.png" type="Texture" id=1]
[ext_resource path="res://Scenes/House/house.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 1, 1 )

[sub_resource type="CircleShape2D" id=1]
radius = 55.109

[node name="House" type="StaticBody2D"]
collision_mask = 7
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Bar" type="ProgressBar" parent="."]
margin_left = -26.0
margin_top = -54.0
margin_right = 25.0
margin_bottom = -40.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/fg = SubResource( 2 )
max_value = 20.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -46, 12, -22, -21, 5, -27, 36, -14, 46, 12, 33, 27, -1, 32, -34, 24 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
